--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
+    "@angular/animations": "^16.2.12",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
@@ -18,8 +18,13 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ngneat/until-destroy": "^10.0.0",
     "@types/three": "^0.158.2",
+    "font-awesome": "^4.7.0",
+    "jwt-decode": "^4.0.0",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.1",
     "three": "^0.158.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
