--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@ngneat/until-destroy": "^10.0.0",
+    "@popperjs/core": "^2.11.6",
     "@types/three": "^0.158.2",
+    "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^18.0.0",
@@ -33,6 +36,7 @@
     "@angular-devkit/build-angular": "^16.1.0",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
+    "@angular/localize": "^16.1.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
