--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.11.6",
     "@types/three": "^0.158.2",
     "bootstrap": "^5.2.3",
+    "angular-animations": "^0.11.0",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^18.0.0",
