--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run build:svg:enum && ng serve",
     "build": "ng build",
+    "build:svg:enum": "node ./convert-icons.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
