--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@ngneat/until-destroy": "^10.0.0",
     "@popperjs/core": "^2.11.6",
     "@types/three": "^0.158.2",
-    "bootstrap": "^5.2.3",
     "angular-animations": "^0.11.0",
+    "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^18.0.0",
+    "prettier": "^3.1.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.1",
     "three": "^0.158.0",
