--- a/package.json
+++ b/package.json
@@ -19,20 +19,27 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@asymmetrik/ngx-leaflet": "^16.0.1",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@ng-select/ng-select": "^11.2.0",
     "@ngneat/until-destroy": "^10.0.0",
     "@popperjs/core": "^2.11.6",
+    "@types/leaflet": "^1.9.8",
     "@types/three": "^0.158.2",
     "angular-animations": "^0.11.0",
     "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.10",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "ngx-skeleton-loader": "^8.1.0",
     "ngx-toastr": "^18.0.0",
     "prettier": "^3.1.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.1",
     "three": "^0.158.0",
     "tslib": "^2.3.0",
+    "world-countries": "^4.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
